--- a/Krakend/docker-compose.yml
+++ b/Krakend/docker-compose.yml
@@ -1,171 +1,21 @@
-version: '3.6'
-services:
-  server:
-    restart: always
-    image: us-docker.pkg.dev/kraken-261806/kk/kkserver:0.1126
-    environment:
-      - KRAKEN_REDIS_ADDR
-      - KRAKEN_DB_URL
-      - KRAKEN_CLICKHOUSE_PORT
-      - KRAKEN_CLICKHOUSE_ADDR
-      - KRAKEN_CLICKHOUSE_URL
-      - KRAKEN_SERVER_PORT
-      - KRAKEN_SERVER_ADDR
-      - KRAKEN_PLANNER_URL
-      - KRAKEN_MINIO_ADDR
-      - MINIO_ROOT_USER
-      - MINIO_ROOT_PASSWORD
-      - MINIO_ACCESS_KEY
-      - MINIO_SECRET_KEY
+version: '3.7'
+services: 
+  designer:
+    image: devopsfaith/krakendesigner:latest
     ports:
-      - $KRAKEN_SERVER_PORT:$KRAKEN_SERVER_PORT
-    expose:
-      - $KRAKEN_SERVER_PORT
-    networks:
-      - db_net
-      - web_net
-      - lab_net
-    depends_on:
-      - postgres
-      - controller
-      - rq
-      - clickhouse
-      - clickhouse-proxy
-  controller:
-    restart: always
-    image: us-docker.pkg.dev/kraken-261806/kk/kkcontroller:0.1126
-    environment:
-      - KRAKEN_REDIS_ADDR
-      - KRAKEN_DB_URL
-      - KRAKEN_CLICKHOUSE_PORT
-      - KRAKEN_CLICKHOUSE_ADDR
-      - KRAKEN_CLICKHOUSE_URL
-      - KRAKEN_SERVER_PORT
-      - KRAKEN_SERVER_ADDR
-      - KRAKEN_PLANNER_URL
-    networks:
-      - db_net
-    depends_on:
-      - rq
-      - postgres
-      - clickhouse-proxy
-  rq:
-    restart: always
-    image: us-docker.pkg.dev/kraken-261806/kk/kkrq:0.1126
-    environment:
-      - KRAKEN_REDIS_ADDR
-      - KRAKEN_DB_URL
-      - KRAKEN_CLICKHOUSE_PORT
-      - KRAKEN_CLICKHOUSE_ADDR
-      - KRAKEN_SERVER_PORT
-      - KRAKEN_SERVER_ADDR
-      - KRAKEN_PLANNER_URL
-      - KRAKEN_MINIO_ADDR
-      - MINIO_ROOT_USER
-      - MINIO_ROOT_PASSWORD
-      - MINIO_ACCESS_KEY
-      - MINIO_SECRET_KEY
-    networks:
-      - db_net
-    depends_on:
-      - postgres
-      - redis
-  agent:
-    restart: always
-    image: us-docker.pkg.dev/kraken-261806/kk/kkagent:0.1126
-    environment:
-      - KRAKEN_CLICKHOUSE_ADDR
-      - KRAKEN_SERVER_ADDR
-      - KRAKEN_AGENT_BUILTIN=1
-    networks:
-      - lab_net
-    depends_on:
-      - server
-      - minio
-      - clickhouse-proxy
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-  ui:
-    image: us-docker.pkg.dev/kraken-261806/kk/kkui:0.1126
-    environment:
-      - KRAKEN_SERVER_ADDR
-    ports:
-      - $KRAKEN_UI_PUBLIC_PORT:80
-    networks:
-      - web_net
-    depends_on:
-      - server
-  postgres:
-    image: postgres:11.16-bullseye
-    environment:
-      - POSTGRES_USER
-      - POSTGRES_PASSWORD
-      - POSTGRES_DB
-    volumes:
-      - db-data:/var/lib/postgresql/data
-    networks:
-      - db_net
-  redis:
-    image: redis:7.0.5-alpine3.16
-    networks:
-      - db_net
-      # clickhouse & co.
-  clickhouse:
-    image: us-docker.pkg.dev/kraken-261806/kk/clickhouse-server:22.10.2.11.0.1126
-    #--ulimit nofile=262144:262144
-    volumes:
-      - clickhouse:/var/lib/clickhouse
-    ports:
-      - "8123:8123"
-      - "9000:9000"
-    networks:
-      - db_net
-  clickhouse-proxy:
-    image: us-docker.pkg.dev/kraken-261806/kk/kkchproxy:0.1126
-    environment:
-      - KRAKEN_CLICKHOUSE_URL
-    ports:
-      - $KRAKEN_CLICKHOUSE_PORT:$KRAKEN_CLICKHOUSE_PORT/udp
-    expose:
-      - $KRAKEN_CLICKHOUSE_PORT
-    networks:
-      - db_net
-      - lab_net
-    depends_on:
-      - clickhouse
-  minio:
-    image: minio/minio:RELEASE.2022-10-24T18-35-07Z
-    environment:
-      - MINIO_ROOT_USER
-      - MINIO_ROOT_PASSWORD
-      - MINIO_ACCESS_KEY
-      - MINIO_SECRET_KEY
-    command: server --address :$KRAKEN_MINIO_PORT --console-address :$KRAKEN_MINIO_CONSOLE_PORT /data
-    volumes:
-      - minio:/data
-    ports:
-      - $KRAKEN_MINIO_PORT:$KRAKEN_MINIO_PORT
-      - $KRAKEN_MINIO_CONSOLE_PORT:$KRAKEN_MINIO_CONSOLE_PORT
-    expose:
-      - $KRAKEN_MINIO_PORT
-      - $KRAKEN_MINIO_CONSOLE_PORT
-    networks:
-      - lab_net
-      - db_net
-volumes:
-  db-data:
-    labels:
-      kraken: true
-  clickhouse:
-    labels:
-      kraken: true
-  minio:
-    labels:
-      kraken: true
-networks:
-  db_net:
-    driver: bridge
-  web_net:
-    driver: bridge
-  lab_net:
-    driver: bridge
+      - 8787:80
+  krakend:
+    image: devopsfaith/krakend:config-watcher
+    working_dir: /etc/krakend/
+    environment: 
+      KRAKEND_CONFIG: krakend.yml
+    ports: 
+      - 80:8000
+    volumes: 
+      - ./konf.d:/etc/krakend/
+  check:
+    image: devopsfaith/krakend
+    working_dir: /etc/krakend/
+    command: check -c krakend.yml
+    volumes: 
+      - ./konf.d:/etc/krakend
