--- a/KongDeclarative/docker-compose.yml
+++ b/KongDeclarative/docker-compose.yml
@@ -1,21 +1,42 @@
-version: "3.7"
+version: "3.9"
 
 services:
   kong:
-    image: kong:latest
-    container_name: KONG_ADMIN_ACCESS_LOG
+    image: kong:3.6
+    container_name: kong
     volumes:
       - ./kong.yml:/usr/local/kong/declarative/kong.yml
     environment:
-      - KONG_DATABASE=off
-      - KONG_DECLARATIVE_CONFIG=/usr/local/kong/declarative/kong.yml
-      - KONG_PROXY_ACCESS_LOG=/dev/stdout
-      - KONG_ADMIN_ACCESS_LOG=/dev/stdout
-      - KONG_PROXY_ERROR_LOG=/dev/stderr
-      - KONG_ADMIN_ERROR_LOG=/dev/stderr
-      - KONG_ADMIN_LISTEN=0.0.0.0:8001, 0.0.0.0:8444 ssl
+      KONG_DATABASE: "off"
+      KONG_DECLARATIVE_CONFIG: /usr/local/kong/declarative/kong.yml
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001"
+      KONG_PROXY_LISTEN: "0.0.0.0:8000"
     ports:
-      - "8000:8000"
-      - "8443:8443"
-      - "127.0.0.1:8001:8001"
-      - "127.0.0.1:8444:8444"
+      - "8000:8000"     # Public Proxy
+      - "8001:8001"   # Admin API
+
+  service1:
+    build:
+      context: ./services/service1
+    volumes:
+      - ./services/service1:/app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    ports:
+      - "9001:8000"
+    expose:
+      - 8000
+
+  service2:
+    build:
+      context: ./services/service2
+    volumes:
+      - ./services/service2:/app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    ports:
+      - "9002:8000"
+    expose:
+      - 8000
